changement nom fichiers

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,8 +33,8 @@
 				<a href="/" class="m-2 bouton">
 					Compte
 				</a>
-				<div class="m-2 btn btn-dark">Contact
-				</div>
+				<a href="/" class="m-2 bouton">Contact
+				</a>
 			</div>
 			<HR>
 		{% endblock %}
