--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,13 +34,13 @@
 								<a class="nav-link active" aria-current="page" href="/templates">Templates</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Abonemment</a>
+								<a class="nav-link" href="/abonnement">Abonemment</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Projet</a>
+								<a class="nav-link" href="projet">Projet</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link disabled">Contact</a>
+								<a class="nav-link " href="contact">Contact</a>
 							</li>
 						</ul>
 					</div>
