--- a/templates/redirect/templates.html.twig
+++ b/templates/redirect/templates.html.twig
@@ -5,11 +5,13 @@
 
 {% block body %}
 	<h1>Select a template:</h1>
-	<div class="template-options">
-		{% for template in templates %}
-			<a href="/{{ template.filename }}">
-				<img src="/{{ template.image }}" alt="{{ template.name }}">
-			</a>
-		{% endfor %}
-	</div>
+
+	
+	{# <div class="template-options">
+							{% for template in templates %}
+								<a href="/{{ template.filename }}">
+									<img src="/{{ template.image }}" alt="{{ template.name }}">
+								</a>
+							{% endfor %}
+						</div> #}
 {% endblock %}
