--- a/templates/redirect/contact.html.twig
+++ b/templates/redirect/contact.html.twig
@@ -4,7 +4,20 @@
 {% endblock %}
 
 {% block body %}
-	<h1>contact</h1>
+	<h1>Nous contacter: </h1>
+	<br>
+	<hr>
+	<br>
 
-	
+	<div class="card" >
+		<img src="{{asset('img/TempCodeLogo.png')}}" class="card-img-right" alt="image">
+		<div class="card-body">
+			<h5 class="card-title">Contact Information</h5>
+			<p class="card-text">
+				Email: info@example.com<br>
+				Phone: 555-555-5555
+			</p>
+		</div>
+	</div>
+
 {% endblock %}
