--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -98,7 +98,7 @@
 }
 
 .gold {
-  background-color: rgb(255, 215, 0);
+  background-color: rgb(45, 45, 45);
 }
 
 .card {
@@ -136,4 +136,48 @@
   /* Change the text color to medium grey */
   line-height: 1.5;
   /* Increase the line height to make the text more readable */
+}
+.card-container{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+.cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  width: 300px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-titles {
+  font-size: 24px;
+  margin: 0;
+}
+
+.card-descriptions {
+  font-size: 18px;
+  margin: 0;
+}
+
+.card-prices {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.btns {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn-oranges {
+  background-color: orange;
+  color: white;
 }
