--- a/templates/redirect/abonnement.html.twig
+++ b/templates/redirect/abonnement.html.twig
@@ -4,24 +4,23 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Abonnement</h1>
-	<hr>
+	<h1 style="margin-left : 10px">Subscription</h1>
 	<div class="card-container d-flex">
 		<div class="cards basic" >
-			<h2 class="card-titles" style="color: black;">Card 1</h2>
-			<p class="card-descriptions">This is the description for card 1</p>
+			<h2 class="card-titles" style="color: black;">BASIC</h2>
+			<p class="card-descriptions">With Basic have acess to 3 templates and create 1 personalised menu </p>
 			<p class="card-prices">$9.99/month</p>
 			<button class="btns btn-oranges">Subscribe</button>
 		</div>
 		<div class="cards premium" >
-			<h2 class="card-titles" style="color: black;">Card 2</h2>
-			<p class="card-descriptions">This is the description for card 2</p>
+			<h2 class="card-titles" style="color: black;">PREMIUM</h2>
+			<p class="card-descriptions">With PREMIUM have access to 10 selected templates and crate 3 different personalised menu </p>
 			<p class="card-prices">$19.99/month</p>
 			<button class="btns btn-oranges">Subscribe</button>
 		</div>
 		<div class="cards gold">
-			<h2 class="card-titles" style="color: white;">Card 3</h2>
-			<p class="card-descriptions " style="color: white;">This is the description for card 3</p>
+			<h2 class="card-titles" style="color: white;">GOLD</h2>
+			<p class="card-descriptions " style="color: white;"> wirh GOLD have an illimited access to the templates and create as many personalised menu as you want with no restriction</p>
 			<p class="card-prices" style="color: white;">$29.99/month</p>
 			<button class="btns btn-oranges">Subscribe</button>
 		</div>
