--- a/templates/redirect/templates.html.twig
+++ b/templates/redirect/templates.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Select a template:</h1>
+	<h1 style="margin-left : 10px">Select a template:</h1>
 
 	
 	{# <div class="template-options">
