--- a/templates/menu/form.html.twig
+++ b/templates/menu/form.html.twig
@@ -1,9 +1,22 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-	{{ form_start(form) }}
-	{{ form_row(form.name)}}
-	<button type="submit" class="btn btn-primary">Submit</button>
-	{{ form_end(form) }}
+
+
+	<div class="container">
+		<div class="card">
+			<div class="card-header">
+				<h2>Menu</h2>
+			</div>
+			<div class="card-body">
+				<div class="alert alert-primary" role="alert">
+					{{ form_start(form) }}
+					{{ form_row(form.name)}}
+					<button type="submit" class="btn btn-primary">Submit</button>
+					{{ form_end(form) }}
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 {% endblock %}
