--- a/templates/redirect/contact.html.twig
+++ b/templates/redirect/contact.html.twig
@@ -4,11 +4,8 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Nous contacter: </h1>
+	<h1 style="margin-left : 10px">Nous contacter: </h1>
 	<br>
-	<hr>
-	<br>
-
 	<div class="card" >
 		<img src="{{asset('img/TempCodeLogo.png')}}" class="card-img-right" alt="image">
 		<div class="card-body">
