--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,11 +6,14 @@
 			{{ error.messageKey }}
 		</div>
 	{% endif %}
-	<form method="post" class="container">
-		<label for="username">Nom d'utilisateur</label>
-		<input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" required/>
-		<label for="password">Mot De Passe</label>
-		<input type="password" id="password" name="_password" class="form-control" required/>
-		<button type="submit" class="btn btn-primary mt-3">Connexion</button>
-	</form>
+	<div class="login-container">
+		<form method="post" class="container">
+			<label for="username">Nom d'utilisateur</label>
+			<input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" required/>
+			<label for="password">Mot De Passe</label>
+			<input type="password" id="password" name="_password" class="form-control" required/>
+			<button type="submit" class="btn btn-primary mt-3">Connexion</button>
+		</form>
+	</div>
+
 {% endblock %}
