ajout du front des form des menus et des templates

--- a/templates/redirect/abonnement.html.twig
+++ b/templates/redirect/abonnement.html.twig
@@ -20,7 +20,7 @@
 		</div>
 		<div class="cards gold">
 			<h2 class="card-titles" style="color: white;">GOLD</h2>
-			<p class="card-descriptions " style="color: white;"> wirh GOLD have an illimited access to the templates and create as many personalised menu as you want with no restriction</p>
+			<p class="card-descriptions " style="color: white;"> wirh GOLD have an illimited access to the templates and create as many personalised menu as you want</p>
 			<p class="card-prices" style="color: white;">$29.99/month</p>
 			<button class="btns btn-oranges">Subscribe</button>
 		</div>
