--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,6 +13,7 @@
 			<label for="password">Mot De Passe</label>
 			<input type="password" id="password" name="_password" class="form-control" required/>
 			<button type="submit" class="btn btn-primary mt-3">Connexion</button>
+			<button type="submit" class="btn btn-grey mt-3">crée un compte</button>
 		</form>
 	</div>
 
