--- a/templates/boisson/form.html.twig
+++ b/templates/boisson/form.html.twig
@@ -1,10 +1,19 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-	{{ form_start(form) }}
-	{{ form_row(form.name)}}
-	{{ form_row(form.price)}}
-	<button type="submit" class="btn btn-primary">Submit</button>
-	{{ form_end(form) }}
+	<div class="container mt-5">
+		<h1 class="text-center">Add a new Drink to the menu</h1>
+		<form method="post" action="{{ path('menu_create') }}">
+			{{ form_start(form) }}
+			<div class="form-group">
+				{{ form_row(form.name)}}
+			</div>
+			<div class="form-group">
+				{{ form_row(form.price)}}
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+			{{ form_end(form) }}
+		</form>
+	</div>
 
 
 {% endblock %}
