--- a/templates/menu/read.html.twig
+++ b/templates/menu/read.html.twig
@@ -1,28 +1,60 @@
 {% extends "base.html.twig" %}
 {% block body %}
-	{{menu.name}}
-	<a class="btn btn-dark" href="/boisson/create/{{ menu.id  }}">ajouter une boisson
-	</a>
-	<a class="btn btn-dark" href="/dessert/create/{{ menu.id  }}">ajouter une dessert
-	</a>
-	<a class="btn btn-dark" href="/plat/create/{{ menu.id  }}">ajouter une plat
-	</a>
-	<a class="btn btn-dark" href="/entrees/create/{{ menu.id  }}">ajouter une entrees
-	</a>
-	{% for drink in drinks %}
-		{{drink.name}}
-		{{drink.price}}
-	{% endfor %}
-	{% for dessert in desserts %}
-		{{dessert.name}}
-		{{dessert.price}} 
-	{% endfor %}
-	{% for plat in plats %}
-		{{plat.name}}
-		{{plat.price}}
-	{% endfor %}
-	{% for entree in entrees %}
-		{{entree.name}}
-		{{entree.price}}
-	{% endfor %}
+
+	<div class="container mt-5">
+		<h1 class="text-center">{{menu.name}}</h1>
+		<div class="row mt-3">
+			<a class="btn btn-dark mr-3" href="/boisson/create/{{ menu.id  }}">ajouter une boisson</a>
+			<a class="btn btn-dark mr-3" href="/dessert/create/{{ menu.id  }}">ajouter une dessert</a>
+			<a class="btn btn-dark mr-3" href="/plat/create/{{ menu.id  }}">ajouter une plat</a>
+			<a class="btn btn-dark mr-3" href="/entrees/create/{{ menu.id  }}">ajouter une entrees</a>
+		</div>
+		<div class="row mt-3">
+			<div class="col-md-6">
+				<h3>Boissons</h3>
+				<ul class="list-group">
+					{% for drink in drinks %}
+						<li class="list-group-item">{{drink.name}}
+							-
+							{{drink.price}}</li>
+					{% endfor %}
+				</ul>
+			</div>
+			<div class="col-md-6">
+				<h3>Desserts</h3>
+				<ul class="list-group">
+					{% for dessert in desserts %}
+						<li class="list-group-item">{{dessert.name}}
+							-
+							{{dessert.price}}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+		<div class="row mt-3">
+			<div class="col-md-6">
+				<h3>Plats</h3>
+				<ul class="list-group">
+					{% for plat in plats %}
+						<li class="list-group-item">{{plat.name}}
+							-
+							{{plat.price}}</li>
+					{% endfor %}
+				</ul>
+			</div>
+			<div class="col-md-6">
+				<h3>Entrées</h3>
+				<ul class="list-group">
+					{% for entree in entrees %}
+						<li class="list-group-item">{{entree.name}}
+							-
+							{{entree.price}}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 {% endblock %}
