--- a/templates/template/form.html.twig
+++ b/templates/template/form.html.twig
@@ -1,12 +1,24 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-	{{ form_start(form) }}
-	{{ form_row(form.name)}}
-	{{ form_row(form.image)}}
-	{{ form_row(form.date)}}
-	{{ form_row(form.tag)}}
-	<button type="submit" class="btn btn-primary">Submit</button>
-	{{ form_end(form) }}
-
+	<div class="container mt-5">
+		<h1 class="text-center">Add a new item to the gallery</h1>
+		<form method="post">
+			{{ form_start(form) }}
+			<div class="form-group">
+				{{ form_row(form.name)}}
+			</div>
+			<div class="form-group">
+				{{ form_row(form.image)}}
+			</div>
+			<div class="form-group">
+				{{ form_row(form.date)}}
+			</div>
+			<div class="form-group">
+				{{ form_row(form.tag)}}
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+			{{ form_end(form) }}
+		</form>
+	</div>
 
 {% endblock %}
