--- a/templates/template/form.html.twig
+++ b/templates/template/form.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 	{{ form_start(form) }}
+	<p>test</p>
 	{{ form_row(form.name)}}
 	{{ form_row(form.image)}}
 	{{ form_row(form.date)}}
