--- a/templates/redirect/index.html.twig
+++ b/templates/redirect/index.html.twig
@@ -5,9 +5,18 @@
 
 {% block body %}
 	<div class="d-flex ">
-		
+
 		<p class="textlarge display-1">
 			DESIGNEZ VOTRE MENU EN LIGNE ET RENDEZ LE ACCESSIBLE PARTOUT
 		</p>
-		<img src="{{asset('img/acceuilmenuexemple.png')}}" alt="image">	</div>
+		<img src="{{asset('img/acceuilmenuexemple.png')}}" alt="image">
+	</div>
+
+	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+
+		<p>TESTTTTTTTT</p>
+
+	{% endif %}
+
+
 {% endblock %}
