--- a/templates/user/readAll.html.twig
+++ b/templates/user/readAll.html.twig
@@ -2,10 +2,18 @@
 {% block body %}
 	{% for plat in lists %}
 		<p>
-			{{plat.name}}</p>
+		{{ form_row(form.prenom)}}
+	</p>
+		<p>
+		{{ form_row(form.nom)}}
+	</p>
+	
 		<p>
 			{{ form_row(form.username)}}
 		</p>
+				<p>
+		{{ form_row(form.email)}}
+	</p>
 		<p>
 			{{ form_row(form.password)}}
 		</p>
