--- a/templates/user/form.html.twig
+++ b/templates/user/form.html.twig
@@ -5,7 +5,23 @@
 		<form method="post">
 			{{ form_start(form) }}
 			<div class="form-group">
-				<h3>Nom de la l'utilisateurs:</h3>
+				<h3>
+					Prenom de l'utilisateurs:</h3>
+				{{ form_row(form.prenom)}}
+			</div>
+			<div class="form-group">
+				<h3>
+					Nom de la l'utilisateurs:</h3>
+				{{ form_row(form.nom)}}
+			</div>
+			<div class="form-group">
+				<h3>
+					Email l'utilisateurs:</h3>
+				{{ form_row(form.email)}}
+			</div>
+			<div class="form-group">
+				<h3>
+					Username de la l'utilisateurs:</h3>
 				{{ form_row(form.username)}}
 			</div>
 			<div class="form-group">
