--- a/templates/redirect/index.html.twig
+++ b/templates/redirect/index.html.twig
@@ -9,5 +9,5 @@
 		<p class="textlarge display-1">
 			DESIGNEZ VOTRE MENU EN LIGNE ET RENDEZ LE ACCESSIBLE PARTOUT
 		</p>
-		<img src="{{asset('img/acceuilmenuexemple.png')}}" alt="image">	</div>
+		<img src="{{asset('img/acceuilmenuexemple.png')}}" alt="image" class="image" style="max-height: 100%; width: auto;">	</div>
 {% endblock %}
