--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,7 +76,7 @@
 		</div>
 
 		<HR class="mt-5">
-		<div class="d-flex justify-content-between ml-5 mr-5 mt-5 textmedium display-4">
+		<div class="d-flex justify-content-between m-5 textmedium display-4">
 			<div>
 				<div>Linkedin</div>
 				<div>Instagram</div>
