supression de tous les dumps sur la redirection

--- a/templates/redirect/index.html.twig
+++ b/templates/redirect/index.html.twig
@@ -4,25 +4,19 @@
 {% endblock %}
 
 {% block body %}
-	<div class="d-flex ">
-
-		<p class="textlarge display-1">
-			DESIGNEZ VOTRE MENU EN LIGNE ET RENDEZ LE ACCESSIBLE PARTOUT
-		</p>
-
-		<img src="{{asset('img/acceuilmenuexemple.png')}}" alt="image">
+	<div>
+		<div class="d-flex ">
+			<p class="textlarge display-1">
+				DESIGNEZ VOTRE MENU EN LIGNE ET RENDEZ LE ACCESSIBLE PARTOUT
+			</p>
+			<img src="{{asset('img/acceuilmenuexemple.png')}}" alt="image">
+		</div>
 	</div>
-  
-  <img src="{{asset('img/acceuilmenuexemple.png')}}" alt="image" class="image" style="max-height: 100%; width: auto;">	</div>
 
 	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
-		<p>TESTTTTTTTT</p>
+		<p>connecté</p>
 
 	{% endif %}
 
-
-=======
-		
- 
 {% endblock %}
