--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,19 +31,19 @@
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="templates">Templates</a>
+								<a class="nav-link active" aria-current="page" href="/templates">Templates</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="abonnement">Abonemment</a>
+								<a class="nav-link" href="/abonnement">Abonemment</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="menu">Menu</a>
+								<a class="nav-link" href="/menu">Menu</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link " href="contact">Contact</a>
+								<a class="nav-link " href="/contact">Contact</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link " href="login">Login</a>
+								<a class="nav-link " href="/login">Login</a>
 							</li>
 						</ul>
 					</div>
@@ -91,6 +91,5 @@
 
 	{% block javascripts %}
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-		{{ encore_entry_script_tags('app') }}
 	{% endblock %}
 </html>
