reglages des problèmes d'affichage des templates et menu

--- a/templates/redirect/index.html.twig
+++ b/templates/redirect/index.html.twig
@@ -9,13 +9,11 @@
 			<p class="textlarge display-1">
 				DESIGNEZ VOTRE MENU EN LIGNE ET RENDEZ LE ACCESSIBLE PARTOUT
 			</p>
-			<img src="{{asset('img/acceuilmenuexemple.png')}}" alt="image">
+			<img src="{{asset('img/acceuilmenuexemple.png')}}" class="w-50"alt="image">
 		</div>
 	</div>
 
 	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
-
-		<p>connecté</p>
 
 	{% endif %}
 
