--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,7 +43,15 @@
 								<a class="nav-link " href="/contact">Contact</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link " href="/login">Login</a>
+								<a class="nav-link " href="/login">
+									{% if app.user %}
+									{{
+										app.user.username
+									}}
+									{% else %}
+									Login
+									{% endif %}
+								</a>
 							</li>
 						</ul>
 					</div>
