--- a/templates/redirect/templates.html.twig
+++ b/templates/redirect/templates.html.twig
@@ -19,23 +19,40 @@
 			</div>
 		</div>
 	</div>
+	<div class="text-center">
+		<form action="{{ path('templates') }}" method="get" class="form-inline my-2 my-lg-0 d-flex">
+			<input class="form-control mr-sm-2" type="search" name="searchedValue" placeholder="Enter search query" aria-label="Search" style="width: 50%">
+			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+		</form>
+	</div>
 
-	{% for template in templates %}
-		<li class="list-group-item">
-			<div class="d-flex justify-content-between">
-				<div>
-					{{template.name}}
-					-
-					{{template.image}}
-					-
-					{{template.tag}}
-				</div>
-			</div>
-		</li>
-	{% endfor %}
-
-	$searchedValue = $request->query->get('searchedValue');
-	$templates = $repository->findBy(['name' => $searchedValue]);
+	<div class="row mt-3 m-auto">
+		<div class="col-md-12 ">
+			<h3>Templates</h3>
+			<ul class="list-group">
+				{% for template in templates %}
+					<li class="list-group-item">
+						<div class="d-flex justify-content-between">
+							<div>
+								<h5>
+									Nom de la templates :</h5>
+								{{template.name}}
+							</div>
+							<div>
+								<h5>Image :</h5>
+								{{template.image}}
+							</div>
+							<div class="d-flex">
+								<h5>Tag:
+								</h5>
+								{{template.tag}}
+							</div>
+						</div>
+					</li>
+				{% endfor %}
+			</ul>
+		</div>
+	</div>
 
 
 {% endblock %}
