--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,16 +42,21 @@
 							<li class="nav-item">
 								<a class="nav-link " href="/contact">Contact</a>
 							</li>
-							<li class="nav-item">
-								<a class="nav-link " href="/login">
+							<li class="nav-item d-flex">
+								<a class="nav-link  " href="/login">
 									{% if app.user %}
-									{{
+										{{
 										app.user.username
 									}}
 									{% else %}
-									Login
+										Login
 									{% endif %}
 								</a>
+							</li>
+							<li>
+								{% if app.user %}
+									<a href="/logout" class="btn" >logout</a>
+								{% endif %}
 							</li>
 						</ul>
 					</div>
