--- a/templates/menu/form.html.twig
+++ b/templates/menu/form.html.twig
@@ -2,6 +2,7 @@
 {% block body %}
 
 
+	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 	<div class="container">
 		<div class="card">
 			<div class="card-header">
@@ -17,6 +18,16 @@
 			</div>
 		</div>
 	</div>
+	{% else %}
+
+		<div class="alert alert-warning alert-dismissible fade show" role="alert">
+			You must be logged in to access this page.
+			<button type="button" class="btn btn-light" data-dismiss="alert" aria-label="Close">
+				<a href="/login">login</a>
+			</button>
+		</div>
+
+	{% endif %}
 
 
 {% endblock %}
