--- a/templates/menu/read.html.twig
+++ b/templates/menu/read.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block body %}
-
+	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 	<div class="container mt-5">
 		<h1 class="text-center">{{menu.name}}</h1>
 		<div class="row mt-3">
@@ -103,4 +103,14 @@
 
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+	{% else %}
+
+		<div class="alert alert-warning alert-dismissible fade show" role="alert">
+			You must be logged in to access this page.
+			<button type="button" class="btn btn-light" data-dismiss="alert" aria-label="Close">
+				<a href="/login">login</a>
+			</button>
+		</div>
+
+	{% endif %}
 {% endblock %}
