--- a/templates/redirect/menu.html.twig
+++ b/templates/redirect/menu.html.twig
@@ -3,46 +3,90 @@
 {% block title %}Menu-TempCode
 {% endblock %}
 
+
 {% block body %}
-	<br>
-	<div class="container">
-		<div class="card">
-			<div class="card-header">
-				<h2>Create a New Menu</h2>
-			</div>
-			<div class="card-body">
-				<div class="alert alert-primary" role="alert">
-					Do you want to create a new menu?
-					<a href="menu/create">
-						<button type="button" class="btn btn-primary mr-2">Create</button>
-					</a>
+	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+
+		<br>
+		<div class="container">
+			<div class="card">
+				<div class="card-header">
+					<h2>Create a New Menu</h2>
+				</div>
+				<div class="card-body">
+					<div class="alert alert-primary" role="alert">
+						Do you want to create a new menu?
+						<a href="menu/create">
+							<button type="button" class="btn btn-primary mr-2">Create</button>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<div class="row mt-3 ">
-		<div class="col-md-6 "  style="margin : auto">
-			<h3>Menus</h3>
-			<ul class="list-group">
-				{% for menu in menus %}
-					<li class="list-group-item">
-						<div class="d-flex justify-content-between">
-							<div>
-								<h3>vos menu : {{ menu.name }}</h3>
-								{% for drink in menu.drink %}
-
-								<h1>{{ drink.name }}</h1>
-								{% endfor %}
+		<div class="row mt-3 ">
+			<div class="col-md-6 " style="margin : auto">
+				<h3>Menus</h3>
+				<ul class="list-group">
+					{% for menu in menus %}
+						<li class="list-group-item">
+							<div class="d-flex justify-content-between">
+								<div>
+									<h3>vos menu :
+										{{ menu.name }}</h3>
+									<h4>Plat:
+									</h4>
+									{% for plat in menu.plat %}
+										<h5>{{ plat.name }}
+											-
+											{{plat.price}}
+											€
+										</h5>
+									{% endfor %}
+									<h4>starter:
+									</h4>
+									{% for entree in menu.entrees %}
+										<h5>{{ entree.name }}
+											-
+											{{entree.price}}
+											€</h5>
+									{% endfor %}
+									<h4>Drink:
+									</h4>
+									{% for drink in menu.drink %}
+										<h5>{{ drink.name }}
+											-
+											{{drink.price}}
+											€</h5>
+									{% endfor %}
+									<h4>Dessert:
+									</h4>
+									{% for dessert in menu.dessert %}
+										<h5>{{ dessert.name }}
+											-
+											{{dessert.price}}
+											€</h5>
+									{% endfor %}
+								</div>
+								<div>
+									<a href="/menu/read/{{menu.id}}" class="btn btn-warning">modify</a>
+								</div>
 							</div>
-							<div>
-								<a href="/menu/read/{{menu.id}}" class="btn btn-warning">modify</a>
-							</div>
-						</div>
-					</li>
-					<hr>
-				{% endfor %}
-			</ul>
+						</li>
+						<hr>
+					{% endfor %}
+				</ul>
+			</div>
 		</div>
-	</div>
-	{% endblock %}
+	{% else %}
+
+		<div class="alert alert-warning alert-dismissible fade show" role="alert">
+			You must be logged in to access this page.
+			<button type="button" class="btn btn-light" data-dismiss="alert" aria-label="Close">
+				<a href="/login">login</a>
+			</button>
+		</div>
+
+	{% endif %}
+
+{% endblock %}
