--- a/templates/redirect/templates.html.twig
+++ b/templates/redirect/templates.html.twig
@@ -4,55 +4,67 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container">
-		<div class="card">
-			<div class="card-header">
-				<h2>Create a New Template</h2>
-			</div>
-			<div class="card-body">
-				<div class="alert alert-primary" role="alert">
-					Do you want to create a new template?
-					<a href="template/create">
-						<button type="button" class="btn btn-primary mr-2">Create</button>
-					</a>
+	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+		<div class="container">
+			<div class="card">
+				<div class="card-header">
+					<h2>Create a New Template</h2>
+				</div>
+				<div class="card-body">
+					<div class="alert alert-primary" role="alert">
+						Do you want to create a new template?
+						<a href="template/create">
+							<button type="button" class="btn btn-primary mr-2">Create</button>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="text-center">
-		<form action="{{ path('templates') }}" method="get" class="form-inline my-2 my-lg-0 d-flex">
-			<input class="form-control mr-sm-2" type="search" name="searchedValue" placeholder="Enter search query" aria-label="Search" style="width: 50%">
-			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		</form>
-	</div>
-
-	<div class="row mt-3 m-auto">
-		<div class="col-md-12 ">
-			<h3>Templates</h3>
-			<ul class="list-group">
-				{% for template in templates %}
-					<li class="list-group-item">
-						<div class="d-flex justify-content-between">
-							<div>
-								<h5>
-									Nom de la templates :</h5>
-								{{template.name}}
-							</div>
-							<div>
-								<h5>Image :</h5>
-								{{template.image}}
-							</div>
-							<div class="d-flex">
-								<h5>Tag:
-								</h5>
-								{{template.tag}}
-							</div>
-						</div>
-					</li>
-				{% endfor %}
-			</ul>
+		<div class="text-center">
+			<form action="{{ path('templates') }}" method="get" class="form-inline my-2 my-lg-0 d-flex">
+				<input class="form-control mr-sm-2" type="search" name="searchedValue" placeholder="Enter search query" aria-label="Search" style="width: 50%">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
 		</div>
-	</div>
+
+		<div class="row mt-3 m-auto">
+			<div class="col-md-12 ">
+				<h3>Templates</h3>
+				<ul class="list-group">
+					{% for template in templates %}
+						<li class="list-group-item">
+							<div class="d-flex justify-content-between">
+								<div>
+									<h5>
+										Nom de la templates :</h5>
+									{{template.name}}
+								</div>
+								<div>
+									<h5>Image :</h5>
+									{{template.image}}
+								</div>
+								<div class="d-flex">
+									<h5>Tag:
+									</h5>
+									{{template.tag}}
+								</div>
+							</div>
+						</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+
+	{% else %}
+
+		<div class="alert alert-warning alert-dismissible fade show" role="alert">
+			You must be logged in to access this page.
+			<button type="button" class="btn btn-light" data-dismiss="alert" aria-label="Close">
+				<a href="/login">login</a>
+			</button>
+		</div>
+
+	{% endif %}
 
 
 {% endblock %}
