--- a/templates/template/form.html.twig
+++ b/templates/template/form.html.twig
@@ -1,25 +1,37 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-	<div class="container mt-5">
-		<h1 class="text-center">Add a new templates</h1>
-		<form method="post">
-			{{ form_start(form) }}
-			<div class="form-group">
-			<h3>Nom de la template:</h3>
-				{{ form_row(form.name)}}
-			</div>
-			<div class="form-group">
-			<h3>Image de la template:</h3>
-				{{ form_row(form.image)}}
-			</div>
-			<div class="form-group">
-				<h3>Tag de la template:</h3>
-				{{ form_row(form.tag)}}
-			</div>
-			<br>
-			<button type="submit" class="btn btn-primary">Submit</button>
-			{{ form_end(form) }}
-			<hr>
-		</form>
-	</div>
+
+	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+		<div class="container mt-5">
+			<h1 class="text-center">Add a new templates</h1>
+			<form method="post">
+				{{ form_start(form) }}
+				<div class="form-group">
+					<h3>Nom de la template:</h3>
+					{{ form_row(form.name)}}
+				</div>
+				<div class="form-group">
+					<h3>Image de la template:</h3>
+					{{ form_row(form.image)}}
+				</div>
+				<div class="form-group">
+					<h3>Tag de la template:</h3>
+					{{ form_row(form.tag)}}
+				</div>
+				<br>
+				<button type="submit" class="btn btn-primary">Submit</button>
+				{{ form_end(form) }}
+				<hr>
+			</form>
+		</div>
+	{% else %}
+
+		<div class="alert alert-warning alert-dismissible fade show" role="alert">
+			You must be logged in to access this page.
+			<button type="button" class="btn btn-light" data-dismiss="alert" aria-label="Close">
+				<a href="/login">login</a>
+			</button>
+		</div>
+
+	{% endif %}
 {% endblock %}
