traduction du site en anglais et correction de quelques bug en front

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
 								<a class="nav-link active" aria-current="page" href="/templates">Templates</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="/abonnement">Abonemment</a>
+								<a class="nav-link" href="/abonnement">Subscription</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="/menu">Menu</a>
@@ -71,20 +71,20 @@
 
 	{% block footer %}
 		<div class="d-flex flex-column footer-space">
-			<div class="footerblack d-flex flex-column">TRAVAILLONS ENSEMBLE ET FAISONS GRANDIR VOTRE PROJET
+			<div class="footerblack d-flex flex-column">WORK TOGETHER AND MAKE YOUR PROJECT GROW
 				<div class="btn btn-light w-25">
-					SOUMETRE UN PROJET
+					SUBMIT A PROJECT
 				</div>
 			</div>
 		</div>
 
 		<div class="newsletter">
 			<div>
-				Nous suivre :
+				Follow the newsletter :
 			</div>
 			<div>
 				<input type="text" placeholder="coucou@mail.com">
-				<button class="btn btn-outline-dark">envoyé</button>
+				<button class="btn btn-outline-dark">send</button>
 			</div>
 		</div>
 
