--- a/templates/redirect/contact.html.twig
+++ b/templates/redirect/contact.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1 style="margin-left : 10px">Nous contacter: </h1>
+	<h1 style="margin-left : 10px">Contact the support: </h1>
 	<br>
 	<div class="card" >
 		<img src="{{asset('img/TempCodeLogo.png')}}" class="card-img-right" alt="image">
