--- a/templates/redirect/index.html.twig
+++ b/templates/redirect/index.html.twig
@@ -7,7 +7,7 @@
 	<div>
 		<div class="d-flex ">
 			<p class="textlarge display-1">
-				DESIGNEZ VOTRE MENU EN LIGNE ET RENDEZ LE ACCESSIBLE PARTOUT
+				DESIGN YOUR MENU ONLINE AND MAKE IT ACCESSIBLE EVERYWHERE
 			</p>
 			<img src="{{asset('img/acceuilmenuexemple.png')}}" class="w-50"alt="image">
 		</div>
