--- a/templates/redirect/menu.html.twig
+++ b/templates/redirect/menu.html.twig
@@ -32,7 +32,7 @@
 						<li class="list-group-item">
 							<div class="d-flex justify-content-between">
 								<div>
-									<h3>vos menu :
+									<h3>Your menu :
 										{{ menu.name }}</h3>
 									<h4>Plat:
 									</h4>
