--- a/templates/boisson/form.html.twig
+++ b/templates/boisson/form.html.twig
@@ -5,11 +5,15 @@
 		<form method="post">
 			{{ form_start(form) }}
 			<div class="form-group">
+				<h4>Drink :</h4>
 				{{ form_row(form.name)}}
 			</div>
 			<div class="form-group">
+				<h4>Price:
+				</h4>
 				{{ form_row(form.price)}}
 			</div>
+			<br>
 			<button type="submit" class="btn btn-primary">Submit</button>
 			{{ form_end(form) }}
 		</form>
