--- a/templates/boisson/update.html.twig
+++ b/templates/boisson/update.html.twig
@@ -4,7 +4,7 @@
 	{{ form_start(form) }}
 	{{ form_row(form.name)}}
 	{{ form_row(form.price)}}
-	<button type="submit" class="btn btn-primary">Submit</button>
+	<button type="submit" class="btn btn-primary">Submit</button>*
 	{{ form_end(form) }}
 
 
