--- a/templates/menu/read.html.twig
+++ b/templates/menu/read.html.twig
@@ -4,14 +4,15 @@
 	<div class="container mt-5">
 		<h1 class="text-center">{{menu.name}}</h1>
 		<div class="row mt-3">
-			<a class="btn btn-dark mr-3" href="/boisson/create/{{ menu.id  }}">ajouter une boisson</a>
-			<a class="btn btn-dark mr-3" href="/dessert/create/{{ menu.id  }}">ajouter une dessert</a>
-			<a class="btn btn-dark mr-3" href="/plat/create/{{ menu.id  }}">ajouter une plat</a>
-			<a class="btn btn-dark mr-3" href="/entrees/create/{{ menu.id  }}">ajouter une entrees</a>
+
+			<a class="btn btn-dark mr-3" href="/plat/create/{{ menu.id  }}">add a Plat</a>
+			<a class="btn btn-dark mr-3" href="/entrees/create/{{ menu.id  }}">Add a Starter</a>
+			<a class="btn btn-dark mr-3" href="/boisson/create/{{ menu.id  }}">Add a Drink</a>
+			<a class="btn btn-dark mr-3" href="/dessert/create/{{ menu.id  }}">Add a Desert</a>
 		</div>
 		<div class="row mt-3">
 			<div class="col-md-6">
-				<h3>Boissons</h3>
+				<h3>Drinks</h3>
 				<ul class="list-group">
 					{% for drink in drinks %}
 						<li class="list-group-item">
@@ -23,8 +24,8 @@
 									€
 								</div>
 								<div>
-									<a href="/boisson/update/{{drink.id}}" class="btn btn-warning">modifier</a>
-									<a href="/boisson/delete/{{drink.id}}" class="btn btn-danger">supprimer</a>
+									<a href="/boisson/update/{{drink.id}}" class="btn btn-warning">Edit</a>
+									<a href="/boisson/delete/{{drink.id}}" class="btn btn-danger">delete</a>
 								</div>
 							</div>
 						</li>
@@ -44,8 +45,8 @@
 									€
 								</div>
 								<div>
-									<a href="/dessert/update/{{dessert.id}}" class="btn btn-warning">modifier</a>
-									<a href="/dessert/delete/{{dessert.id}}" class="btn btn-danger">supprimer</a>
+									<a href="/dessert/update/{{dessert.id}}" class="btn btn-warning">Edit</a>
+									<a href="/dessert/delete/{{dessert.id}}" class="btn btn-danger">delete</a>
 								</div>
 							</div>
 						</li>
@@ -68,8 +69,8 @@
 									€
 								</div>
 								<div>
-									<a href="/plat/update/{{plat.id}}" class="btn btn-warning">modifier</a>
-									<a href="/plat/delete/{{plat.id}}" class="btn btn-danger">supprimer</a>
+									<a href="/plat/update/{{plat.id}}" class="btn btn-warning">Edit</a>
+									<a href="/plat/delete/{{plat.id}}" class="btn btn-danger">delete</a>
 								</div>
 							</div>
 						</li>
@@ -77,7 +78,7 @@
 				</ul>
 			</div>
 			<div class="col-md-6">
-				<h3>Entrées</h3>
+				<h3>Starter</h3>
 				<ul class="list-group">
 					{% for entree in entrees %}
 						<li class="list-group-item">
@@ -89,8 +90,8 @@
 									€
 								</div>
 								<div>
-									<a href="/entrees/update/{{entree.id}}" class="btn btn-warning">modifier</a>
-									<a href="/entrees/delete/{{entree.id}}" class="btn btn-danger">supprimer</a>
+									<a href="/entrees/update/{{entree.id}}" class="btn btn-warning">Edit</a>
+									<a href="/entrees/delete/{{entree.id}}" class="btn btn-danger">Delete</a>
 								</div>
 							</div>
 						</li>
