--- a/templates/plat/form.html.twig
+++ b/templates/plat/form.html.twig
@@ -1,10 +1,22 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-	{{ form_start(form) }}
-	{{ form_row(form.name)}}
-	{{ form_row(form.price)}}
-	<button type="submit" class="btn btn-primary">Submit</button>
-	{{ form_end(form) }}
-
+<div class="container mt-5">
+		<h1 class="text-center">Add a new Plat to the menu</h1>
+		<form method="post">
+			{{ form_start(form) }}
+			<div class="form-group">
+				<h4>Plat :</h4>
+				{{ form_row(form.name)}}
+			</div>
+			<div class="form-group">
+				<h4>Price:
+				</h4>
+				{{ form_row(form.price)}}
+			</div>
+			<br>
+			<button type="submit" class="btn btn-primary">Submit</button>
+			{{ form_end(form) }}
+		</form>
+	</div>
 
 {% endblock %}
