--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,14 +8,14 @@
 	{% endif %}
 	<div class="login-container">
 		<form method="post" class="container">
-			<label for="username">Nom d'utilisateur</label>
+			<label for="username">Username :</label>
 			<input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" required/>
-			<label for="password">Mot De Passe</label>
+			<label for="password">Password: </label>
 			<input type="password" id="password" name="_password" class="form-control" required/>
 			<button type="submit" class="btn btn-primary mt-3">Connexion</button>
 		</form>
 		<form action="{{ path('User_create') }}" method="post">
-			<button class="btn btn-grey mt-3" >crée un compte</button>
+			<button class="btn btn-grey mt-3" >creat an account</button>
 		</form>
 		
 	</div>
