--- a/templates/redirect/templates.html.twig
+++ b/templates/redirect/templates.html.twig
@@ -20,12 +20,38 @@
 				</div>
 			</div>
 		</div>
-		<div class="text-center">
-			<form action="{{ path('templates') }}" method="get" class="form-inline my-2 my-lg-0 d-flex">
-				<input class="form-control mr-sm-2" type="search" name="searchedValue" placeholder="Enter search query" aria-label="Search" style="width: 50%">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-			</form>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					<form action="{{ path('templates') }}" method="get" class="form-inline my-2 my-lg-0 d-flex">
+						<input class="form-control mr-sm-2" type="search" name="searchedValue" placeholder="Enter search query" aria-label="Search" style="width: 60%">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					</form>
+				</div>
+			</div>
 		</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<form action="{{ path('templates') }}" method="get" class="form-inline">
+						<label for="sortBy" class="mr-sm-2">Sort by:</label>
+						<select name="sortBy" id="sortBy" class="form-control form-control-sm mr-sm-2" style="width: 20%">
+							<option value="name">Name</option>
+							<option value="tag">Tag</option>
+						</select>
+						<label for="sortDirection" class="mr-sm-2">Direction:</label>
+						<select name="sortDirection" id="sortDirection" class="form-control form-control-sm mr-sm-2" style="width: 20%">
+							<option value="ASC">Ascending</option>
+							<option value="DESC">Descending</option>
+						</select>
+						<br>
+						<button type="submit" class="btn btn-primary btn-sm">Sort</button>
+					</form>
+				</div>
+			</div>
+		</div>
+
 
 		<div class="row mt-3 m-auto">
 			<div class="col-md-12 ">
