--- a/templates/redirect/templates.html.twig
+++ b/templates/redirect/templates.html.twig
@@ -67,7 +67,8 @@
 								</div>
 								<div>
 									<h5>Image :</h5>
-									{{template.image}}
+									<img src="{{template.image}}" alt="image templates">
+									
 								</div>
 								<div class="d-flex">
 									<h5>Tag:
