--- a/templates/redirect/menu.html.twig
+++ b/templates/redirect/menu.html.twig
@@ -71,6 +71,9 @@
 								<div>
 									<a href="/menu/read/{{menu.id}}" class="btn btn-warning">modify</a>
 								</div>
+								<div>
+									<a href="/menu/delete/{{menu.id}}" class="btn btn-danger">delete</a>
+								</div>
 							</div>
 						</li>
 						<hr>
