--- a/templates/redirect/templates.html.twig
+++ b/templates/redirect/templates.html.twig
@@ -68,12 +68,18 @@
 								<div>
 									<h5>Image :</h5>
 									<img src="{{template.image}}" alt="image templates">
-									
+
 								</div>
 								<div class="d-flex">
 									<h5>Tag:
 									</h5>
 									{{template.tag}}
+								</div>
+								<div>
+									<a href="/template/update/{{template.id}}" class="btn btn-warning">modify</a>
+								</div>
+								<div>
+									<a href="/template/delete/{{template.id}}" class="btn btn-danger">delete</a>
 								</div>
 							</div>
 						</li>
