--- a/templates/template/read.html.twig
+++ b/templates/template/read.html.twig
@@ -2,16 +2,16 @@
 {% block body %}
 
 	<p>
-		{{ form_row(form.name)}}
+		{{ form_row(template.name)}}
 	</p>
 	<p>
-		{{ form_row(form.image)}}
+		{{ form_row(template.image)}}
 	</p>
 	<p>
-		{{ form_row(form.date)}}
+		{{ form_row(template.date)}}
 	</p>
 	<p>
-		{{ form_row(form.tag)}}
+		{{ form_row(template.tag)}}
 	</p>
 
 {% endblock %}
