--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,19 +43,22 @@
 								<a class="nav-link " href="/contact">Contact</a>
 							</li>
 							<li class="nav-item d-flex">
-								<a class="nav-link  " href="/login">
-									{% if app.user %}
+
+								{% if app.user %}
+									<a href="/user/update/{{app.user.id}}">
 										{{
 										app.user.username
 									}}
-									{% else %}
+									</a>
+								{% else %}
+									<a class="nav-link  " href="/login">
 										Login
 									{% endif %}
 								</a>
 							</li>
 							<li>
 								{% if app.user %}
-									<a href="/logout" class="btn" >logout</a>
+									<a href="/logout" class="btn">logout</a>
 								{% endif %}
 							</li>
 						</ul>
