--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -1,13 +1,36 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-	{{ form_start(form) }}
-	{{ form_row(form.prenom)}}
-	{{ form_row(form.nom)}}
-	{{ form_row(form.username)}}
-	{{ form_row(form.email)}}
-	{{ form_row(form.password)}}
-	<button type="submit" class="btn btn-primary">Submit</button>
-	{{ form_end(form) }}
-
-
+	<div class="container mt-5">
+		<h1 class="text-center">Cree un nouvel utilisateurs</h1>
+		<form method="post">
+			{{ form_start(form) }}
+			<div class="form-group">
+				<h3>
+					Prenom de l'utilisateurs:</h3>
+				{{ form_row(form.prenom)}}
+			</div>
+			<div class="form-group">
+				<h3>
+					Nom de la l'utilisateurs:</h3>
+				{{ form_row(form.nom)}}
+			</div>
+			<div class="form-group">
+				<h3>
+					Email l'utilisateurs:</h3>
+				{{ form_row(form.email)}}
+			</div>
+			<div class="form-group">
+				<h3>
+					Username de la l'utilisateurs:</h3>
+				{{ form_row(form.username)}}
+			</div>
+			<div class="form-group">
+				<h3>password utilisateurs:</h3>
+				{{ form_row(form.password)}}
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+			{{ form_end(form) }}
+			<hr>
+		</form>
+	</div>
 {% endblock %}
